
    Registries:
        - some work on deferred registries, and the other registry parts

    Rendering:
        - window caption contains now in dev version branch name + last commit hash

    Bug Fixes:
        - BlockItemGenerator was doing not what it was supposed to do

    Gameplay:
        - creative item search tab is now filled with items


changelog of snapshot 21w35a released on 01.09.2021 targeting 1.17.1
    JVM:
        - a lot smaller stuff, fixes, more integration work
        - decoupled JVM from main code into separate repository

    Mod Loader:
        - rewritten initial discovery system for mods, making it more extendable
        - mods can now provide mod loaders, finally (before, mods where to late to do stuff)
        - mod loading order is no longer stable (inside the dependencies)

    Internals:
        - a big chunk of refactoring, most mods will NOT work

    Block Item Generator:
        - some internal changes, more fail-save, will not generate as much noise when something fails, will skip
            blocks with no-rendering, but will be mostly faster

    Rendering:
        - internal optimisations for the rendering system, refactored some bits, removed unneeded stuff


changelog of snapshot 21w23a released on 9.6.2021 targeting 1.17
    Networking:
        - further work on the network system

    Event system:
        - improved internal event bus system

    Mod loader:
        - moved ExtensionPoint class to mod package [MP4-11]
        - added ModLoader extension point for JavaFML
        - mods have now a "resource_access" attribute holding the resource access of that mod

    JavaFML:
        - implement a JVM in python for loading minecraft: java edition mods
        - added transformer system for transforming java bytecode defined objects into readable code for our loader

        The following mods are known to load partially:
            - biomesoplenty, tested with 1.16.5-13.1.0.471