@@ -19,21 +19,38 @@ class ICapabilityContainer:
     CAPABILITY_CONTAINER_NAME = None
 
     def __init__(self):
-        self.capability_data: typing.Dict[str, typing.Any] = {}
+        self.capability_data: typing.Optional[typing.Dict[str, typing.Any]] = None
 
-    def get_capability_content(self, name: str):
+    def forceAttachmentOfCapability(self, name: str):
         capability = shared.capability_manager.get_by_name(name)
 
         if name not in self.capability_data:
             self.write_raw_capability_data(name, capability.attach(self))
 
-        return capability.prepareData(self, self.capability_data[name])
+    def prepare_container(self):
+        if not hasattr(self, "capability_data"):
+            self.capability_data = None
+
+    def init_container(self):
+        if self.capability_data is None:
+            self.capability_data = {}
+
+    def get_capability_content(self, name: str, raw=False):
+        self.init_container()
+
+        capability = shared.capability_manager.get_by_name(name)
+
+        self.forceAttachmentOfCapability(name)
+
+        return capability.prepareData(self, self.capability_data[name]) if not raw else self.capability_data[name]
 
     def copy_capabilities(self, target: "ICapabilityContainer"):
         for name in self.capability_data.keys():
             self.copy_capability(target, name)
 
     def copy_capability(self, target: "ICapabilityContainer", name: str):
+        target.init_container()
+
         capability = shared.capability_manager.get_by_name(name)
         data = self.capability_data[name]
 
@@ -43,8 +60,30 @@ class ICapabilityContainer:
         target.write_raw_capability_data(name, new_data)
 
     def write_raw_capability_data(self, key: str, data):
+        self.init_container()
         self.capability_data[key] = data
 
     def read_raw_capability_data(self, key: str):
         return self.capability_data[key]
+
+    def serialize_container(self):
+        if self.capability_data is None:
+            return
+
+        d = {}
+        for name, data in self.capability_data.items():
+            capability = shared.capability_manager.get_by_name(name)
+
+            if capability.SHOULD_BE_SAVED:
+                d[name] = capability.rawWrite(self, data)
+
+        return d
+
+    def deserialize_container(self, data: typing.Optional[dict]):
+        if data is None: return
+
+        self.init_container()
+
+        for name, d in data.items():
+            self.capability_data[name] = shared.capability_manager.get_by_name(name).rawRead(d)
 
